Display all Driver,

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,10 @@
                 <a href = "/teams">Teams</a>
             </li>
             <li>
-                <a href = "/races">Races</a>
+                <a href = "/race_results">Race Results</a>
+            </li>
+            <li>
+                <a href = "/grand_prix">Grand Prix</a>
             </li>
         </ul>
     </nav>
