Display Teams and Grands Prix

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                 <a href = "/teams">Teams</a>
             </li>
             <li>
-                <a href = "/race_results">Race Results</a>
+                <a href = "/race_result">Race Result</a>
             </li>
             <li>
                 <a href = "/grand_prix">Grand Prix</a>
