--- a/templates/race_result/index.html
+++ b/templates/race_result/index.html
@@ -19,7 +19,7 @@
             <td>{{ race_result.position }}</td>
             <td>{{ race_result.fastest_lap }}</td>
             <td>{{ race_result.status }}</td>
-            <rd>{{ race_result.sprint_position }}</rd>
+            <td>{{ race_result.sprint_position }}</td>
         </tr>
     {% endfor %}
 </table>
