Add driver and team

--- a/templates/grand_prix/index.html
+++ b/templates/grand_prix/index.html
@@ -20,6 +20,6 @@
     {% endfor %}
 </table>
 
-
+<button type = "submit"><a href = "/grand_prix/new">Add Grand Prix</a></button> 
 
 {% endblock %}
