--- a/templates/drivers/new.html
+++ b/templates/drivers/new.html
@@ -1,11 +1,42 @@
-<!-- similar to below -->
 
-<!-- <div>
-    <label for = "user">User</label>
-    <select id = "user" name = "user_id">
-        {% for user in all_users %}
-            <option value = "{{ user.id }}" {% if task.user.id == user.id %} selected = "selected" {% endif %}>{{ user.first_name }}</option>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>Add a Driver</h1>
+
+
+<form action = "/drivers" method="post">
+    <div>
+        <label for = "driver_racing_number">Driver's Racing Number</label>
+        <input type = "INT" id = "racing_number" name = "racing_number">
+    </div>
+    <div>
+        <label for = "name">Name</label>
+        <input type = "text" id = "name" name = "name">
+    </div>
+    <div>
+        <label for = "nationality">Nationality</label>
+        <input type = "text" id = "nationality" name = "nationality">
+    </div>
+    <div>
+        <label for = "team">Team ID</label>
+        <select id = "team_id" name = "team_id" placeholder = "Team" >
+        {% for team in teams %}
+        <option value = "{{ team.id }}">{{ team.id }} , {{ team.constructor }}, {{ team.engine_supplier }}, {{ team.nationality }}</option>
         {% endfor %}
+        </select>
 
-    </select>
-</div> -->
+    </div>
+    <button type = "submit">Add Driver</button>
+
+
+
+<!-- <form action="/drivers" method="post">
+    <label for="driver">Select a driver:</label>
+    <select name="racing_number" id="driver">
+      {% for driver in drivers %}
+      <option value = "{{ driver.racing_number }}">{{ driver.name }}</option>
+      {% endfor %}
+    </select> -->
+  
+{% endblock %}
