Add teams and buttons in index.html

--- a/templates/race_result/index.html
+++ b/templates/race_result/index.html
@@ -24,6 +24,6 @@
     {% endfor %}
 </table>
 
-
+<button type = "submit"><a href = "/race_result/new">Add Race Result</a></button> 
 
 {% endblock %}
