--- a/templates/grand_prix/index.html
+++ b/templates/grand_prix/index.html
@@ -21,5 +21,6 @@
 </table>
 
 <button type = "submit"><a href = "/grand_prix/new">Add Grand Prix</a></button> 
+<button type = "submit"><a href="/grand_prix/{{ grand_prix.round }}/edit">Edit Grand Prix</a></button>
 
 {% endblock %}
