--- a/templates/teams/new.html
+++ b/templates/teams/new.html
@@ -2,30 +2,36 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Add a team</h1>
+<h1>Add a Team</h1>
 
 
 <form action = "/teams" method="post">
+    
     <div>
         <label for = "id">Team ID</label>
         <input type = "INT" name = "id">
     </div>
+    
     <div>
         <label for = "constructor">Constructor</label>
         <input type = "text" name = "constructor">
     </div>
+
     <div>
         <label for = "engine_supplier">Engine Supplier</label>
         <input type = "text" name = "engine_supplier">
     </div>
+
     <div>
         <label for = "chassis">Chassis</label>
         <input type = "text" name = "chassis">
     </div>
+
     <div>
         <label for = "engine_model">Engine Model</label>
         <input type = "text" name = "engine_model">
     </div>
+
     <div>
         <label for = "nationality">Nationality</label>
         <input type = "text" name = "nationality">
