Add race result

--- a/templates/drivers/new.html
+++ b/templates/drivers/new.html
@@ -7,7 +7,7 @@
 
 <form action = "/drivers" method="post">
     <div>
-        <label for = "driver_racing_number">Driver's Racing Number</label>
+        <label for = "racing_number">Driver's Racing Number</label>
         <input type = "INT" id = "racing_number" name = "racing_number">
     </div>
     <div>
