Delete Race Result

--- a/templates/race_results/index.html
+++ b/templates/race_results/index.html
@@ -13,6 +13,7 @@
         <th>Fastest Lap</th>
         <th>Status</th>
         <th>Sprint Position</th>
+        <th></th>
     </tr>
     {% for race_result in race_results %}
         <tr>
@@ -24,6 +25,13 @@
             <td>{{ race_result.fastest_lap }}</td>
             <td>{{ race_result.status }}</td>
             <td>{{ race_result.sprint_position }}</td>
+            <td>
+                <div class="buttons">
+                    <form class = "delete-form" action = "/race_results/{{ race_result.driver.racing_number }}/{{ race_result.grand_prix.round }}/delete" method = "POST">
+                        <button class = "trash-button"><i class = "fa fa-trash-o fa-3x"></i>Delete Race Result</button>
+                    </form>
+                </div>
+            </td>
         </tr>
     {% endfor %}
 </table>
