--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -21,6 +21,7 @@
             <td>{{ team.chassis }}</td>
             <td>{{ team.engine_model }}</td>
             <td>{{ team.nationality }}</td>
+            <td><button type = "submit"><a href="/teams/{{ team.id }}/edit">Edit Team</a></button></td> 
             <td>
                 <div class="buttons">
                     <form class = "delete-form" action = "/teams/{{ team.id }}/delete" method = "POST">
