Display Championship table

--- a/templates/race_results/index.html
+++ b/templates/race_results/index.html
@@ -39,5 +39,6 @@
 </table>
 
 <button type = "submit"><a href = "/race_results/new">Add Race Result</a></button> 
+<button type = "submit"><a href = "/race_results/championship">Championship</a></button> 
 
 {% endblock %}
