--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <html>    
 <head>
     <title>Formula One</title>
 </head>    
 <body>
-    <nav>
+    <nav id = "navbar">
         <ul>
             <li>
                 <a href = "/drivers">Drivers</a>
@@ -18,6 +20,9 @@
             </li>
             <li>
                 <a href = "/grand_prix">Grand Prix</a>
+            </li>
+            <li>
+                <a href = "/championship">Championship</a>
             </li>
         </ul>
     </nav>
