--- a/templates/drivers/new.html
+++ b/templates/drivers/new.html
@@ -27,16 +27,6 @@
         </select>
 
     </div>
-    <button type = "submit">Add Driver</button>
+    <button class = "button" type = "submit">Add Driver</button>
 
-
-
-<!-- <form action="/drivers" method="post">
-    <label for="driver">Select a driver:</label>
-    <select name="racing_number" id="driver">
-      {% for driver in drivers %}
-      <option value = "{{ driver.racing_number }}">{{ driver.name }}</option>
-      {% endfor %}
-    </select> -->
-  
 {% endblock %}
