--- a/templates/grand_prix/edit.html
+++ b/templates/grand_prix/edit.html
@@ -17,7 +17,7 @@
         <input type = "text" id = "date" name = "date" value = "{{ grand_prix.date }}" required>
     </div>
 
-    <button type = "submit">Update Grand Prix</button>
+    <button class = "button" type = "submit">Update Grand Prix</button>
 
 </form>
 
