--- a/templates/grand_prix/index.html
+++ b/templates/grand_prix/index.html
@@ -18,11 +18,11 @@
             <td>{{ grand_prix.name }}</td>
             <td>{{ grand_prix.circuit }}</td>
             <td>{{ grand_prix.date }}</td>
-            <td><button type = "submit"><a href="/grand_prix/{{ grand_prix.round }}/edit">Edit Grand Prix</a></button></td> 
+            <td><button class = "button" type = "submit"><a href="/grand_prix/{{ grand_prix.round }}/edit">Edit Grand Prix</a></button></td> 
             <td>
                 <div class="buttons">
                     <form class = "delete-form" action = "/grand_prix/{{grand_prix.round}}/delete" method = "POST">
-                        <button class = "trash-button"><i class = "fa fa-trash-o fa-3x"></i>Delete Grand Prix</button>
+                        <button class = "button">Delete Grand Prix</button>
                     </form>
                 </div>
             </td>
@@ -30,7 +30,7 @@
     {% endfor %}
 </table>
 
-<button type = "submit"><a href = "/grand_prix/new">Add Grand Prix</a></button> 
+<button class = "button" type = "submit"><a href = "/grand_prix/new">Add Grand Prix</a></button> 
 
 
 {% endblock %}
