--- a/templates/drivers/edit.html
+++ b/templates/drivers/edit.html
@@ -25,7 +25,7 @@
         </select>
     </div>
 
-    <button type = "submit">Update Driver</button>
+    <button class = "button" type = "submit">Update Driver</button>
 
 </form>
 
