--- a/templates/race_results/new.html
+++ b/templates/race_results/new.html
@@ -54,6 +54,6 @@
             {% endfor %}
         </select>
     </div>
-    <button type = "submit">Add Race Result</button>
+    <button class = "button" type = "submit">Add Race Result</button>
 </form>
 {% endblock %}
