--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -22,11 +22,11 @@
             <td>{{ team.chassis }}</td>
             <td>{{ team.engine_model }}</td>
             <td>{{ team.nationality }}</td>
-            <td><button type = "submit"><a href="/teams/{{ team.id }}/edit">Edit Team</a></button></td> 
+            <td><button class = "button" type = "submit"><a href="/teams/{{ team.id }}/edit">Edit Team</a></button></td> 
             <td>
                 <div class="buttons">
                     <form class = "delete-form" action = "/teams/{{ team.id }}/delete" method = "POST">
-                        <button class = "trash-button"><i class = "fa fa-trash-o fa-3x"></i>Delete Team</button>
+                        <button class = "button">Delete Team</button>
                     </form>
                 </div>
             </td>
@@ -34,7 +34,7 @@
     {% endfor %}
 </table>
 
-<button type = "submit"><a href = "/teams/new">Add Team</a></button> 
+<button class = "button" type = "submit"><a href = "/teams/new">Add Team</a></button> 
 
 
 
