--- a/templates/drivers/edit.html
+++ b/templates/drivers/edit.html
@@ -25,7 +25,9 @@
         </select>
     </div>
 
-    <button class = "button" type = "submit">Update Driver</button>
+
+
+    <button class = "button black" type = "submit">Update Driver</button>
 
 </form>
 
