--- a/templates/drivers/new.html
+++ b/templates/drivers/new.html
@@ -27,6 +27,6 @@
         </select>
 
     </div>
-    <button class = "button" type = "submit">Add Driver</button>
+    <button class = "button red" type = "submit">Add Driver</button>
 
 {% endblock %}
