--- a/templates/teams/edit.html
+++ b/templates/teams/edit.html
@@ -25,7 +25,7 @@
         <input type = "text" id = "nationality" name = "nationality" value = "{{ team.nationality }}" required>
     </div>
 
-    <button class = "button" type = "submit">Update Team</button>
+    <button class = "button black" type = "submit">Update Team</button>
 
 </form>
 
