--- a/templates/teams/new.html
+++ b/templates/teams/new.html
@@ -38,7 +38,7 @@
     </div>
 
 
-    <button class = "button" type = "submit">Add Team</button>
+    <button class = "button red" type = "submit">Add Team</button>
 
   
 {% endblock %}
