--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <html>    
 <head>
