--- a/templates/drivers/index.html
+++ b/templates/drivers/index.html
@@ -18,11 +18,15 @@
             <td>{{ driver.name }}</td>
             <td>{{ driver.nationality }}</td>
             <td>{{ driver.team.constructor }}</td>
-            <td><button class = "button" type = "submit"><a href="/drivers/{{ driver.racing_number}}/edit">Edit Driver</a></button></td> 
+            <td>
+                <form action="/drivers/{{ driver.racing_number}}/edit" method="get">
+                    <button class = "button black" type = "submit">Edit Driver</button>
+                </form>
+            </td> 
             <td>
                 <div >
                     <form class = "delete-form" action = "/drivers/{{ driver.racing_number }}/delete" method = "POST">
-                        <button class = "button">Delete Driver</button>
+                        <button class = "button red">Delete Driver</button>
                     </form>
                 </div>
             </td>
@@ -30,7 +34,9 @@
     {% endfor %}
 </table>
 
-<button class = "button" type = "submit"><a href = "/drivers/new">Add Driver</a></button> 
+<form action = "/drivers/new" method="get">
+    <button class = "button red" type = "submit">Add Driver</button> 
+</form>
 
 
 
