--- a/templates/grand_prix/new.html
+++ b/templates/grand_prix/new.html
@@ -22,7 +22,7 @@
         <label for = "date">Date</label>
         <input type = "text" name = "date">
     </div>
-    <button class = "button" type = "submit">Add Grand prix</button>
+    <button class = "button red" type = "submit">Add Grand prix</button>
 
   
 {% endblock %}
