--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -22,11 +22,15 @@
             <td>{{ team.chassis }}</td>
             <td>{{ team.engine_model }}</td>
             <td>{{ team.nationality }}</td>
-            <td><button class = "button" type = "submit"><a href="/teams/{{ team.id }}/edit">Edit Team</a></button></td> 
+            <td>
+                <form action="/teams/{{ team.id }}/edit" method="get">
+                    <button class = "button black" type = "submit">Edit Team</button>
+                </form>
+            </td> 
             <td>
                 <div class="buttons">
                     <form class = "delete-form" action = "/teams/{{ team.id }}/delete" method = "POST">
-                        <button class = "button">Delete Team</button>
+                        <button class = "button red">Delete Team</button>
                     </form>
                 </div>
             </td>
@@ -34,8 +38,9 @@
     {% endfor %}
 </table>
 
-<button class = "button" type = "submit"><a href = "/teams/new">Add Team</a></button> 
-
+<form action = "/teams/new" method="get">
+    <button class = "button red" type = "submit">Add Team</button> 
+</form>
 
 
 {% endblock %}
